syntax="proto3";
option java_multiple_files = true;
package com.example.grpc;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

message HelloResponseSummary {
  repeated string greeting = 1;
}

message ErrorResponse {
  string error = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc helloServerStream(HelloRequest) returns (stream HelloResponse);
  rpc helloClientStream(stream HelloRequest) returns (stream HelloResponseSummary);
  rpc helloStream(stream HelloRequest) returns (stream HelloResponse);
}
